# EasyEngineLib

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CmakeLists.txt  Dockerfile  EasyEngine.7z  README.md  READMERU.md  binding.sip  convert.h  easyengine.sip  engine.cpp  makefile  pyproject.toml  setup.py
.github/: pyworkflow.yml
.github/workflows/: c-cpp.yml
EasyEngine.egg-info/: PKG-INFO  SOURCES.txt
readme/: CONF_RU.md
src/: __init__.py  binding.cpp  config.json  convert.c  convert.h  convert_audio_to_text.c  engine.c  engine.cpp  engine.h
src/EngineUI/: CMakeLists.txt  main.cpp  mainwindow.ui
src/lib/: FixCV.cpp  OpenCV.cpp  OpenCV.hpp  Untitled-1.cpp
